--- a/css/style.css
+++ b/css/style.css
@@ -577,6 +577,9 @@ footer .container{
   nav ul{
     font-size: 19px;
   }
+  #clabout img{
+    
+  }
   .text-coming-soon,
   #slabout #descbox-about .text-coming-soon,
   #clabout #descbox-about .text-coming-soon{
