--- a/css/style.css
+++ b/css/style.css
@@ -59,11 +59,11 @@
   font-size: 19px;
 }
 .navbar{
-  background: #FB5E57;
+  background: #FFE1B4;
   transition: all 0.3s ease;
 }
 .navbar.sticky{
-  background: #FB5E57;
+  background: #FFE1B4;
   box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.18);
   font-size: 18px;
 }
@@ -115,28 +115,42 @@
 }
 .nav-tabs .nav-link i{
   color: #222;
-  font-size: 22px;
-  margin-left: 10px;
-  margin-bottom: 10px;
+  font-size: 1rem;
+  margin-left: 1em;
+  margin-bottom: .4em;
 }
 .navbar .nav-item .dropdown-menu{
-  display: none; 
+  max-height: 0;
+  display: block;
+  overflow: hidden;
+  opacity: 0;
+  visibility: hidden;
+  border-radius: 8px;
+  padding: 1rem;
+  -webkit-transition: max-height 0.3s, opacity 0.2s 0.1s, visibility 0s 0.3s;
+    -moz-transition: max-height 0.3s, opacity 0.2s 0.1s, visibility 0s 0.3s;
+    -ms-transition: max-height 0.3s, opacity 0.2s 0.1s, visibility 0s 0.3s;
+    -o-transition: max-height 0.3s, opacity 0.2s 0.1s, visibility 0s 0.3s;
+    transition: max-height 0.3s, opacity 0.2s 0.1s, visibility 0s 0.3s;
 }
 .navbar .nav-item:hover .dropdown-menu{
   display: block; 
-}
-.navbar .nav-item .dropdown-menu{ 
-  margin-top:0; 
-  border-radius: 10px;
-  padding: 1rem;
+  max-height: 190px;
+  opacity: 1;
+  visibility: visible;
+  -webkit-transition: max-height 0.3s, opacity 0.2s, visibility 0s;
+  -moz-transition: max-height 0.3s, opacity 0.2s, visibility 0s;
+  -ms-transition: max-height 0.3s, opacity 0.2s, visibility 0s;
+  -o-transition: max-height 0.3s, opacity 0.2s, visibility 0s;
+  transition: max-height 0.3s, opacity 0.2s, visibility 0s;
+
 }
 .navbar .nav-item .dropdown-menu a{
-  font-size: 22px;
-  font-family: "Hind Bold";
-  border-radius: 10px;
+  font-size: 1.1rem;
+  font-family: "Hind Regular";
+  border-radius: 4px;
   width: 10rem;
-  padding: 0.5rem;
-  margin-top: 5%;
+  padding: .2em;
 }
 .navbar .nav-item .dropdown-menu .fas{
   float: right;
@@ -481,7 +495,7 @@ header .container {
 
 /* footer section start */
 .footer {
-  background-color: #530E0B;
+  background: #FFE1B4;
   max-width: 100%;
 }
 footer .container{
@@ -495,18 +509,21 @@ footer .container{
   margin: 70px 0 0 0;
 }
 #footer h1 {
-  color: white;
+  color: black;
   font-size: 18px;
-  font-family: "Hind Regular";
-  font-weight: 0;
+  font-family: "Hind Bold";
+  font-weight: 400;
   letter-spacing: 2px;
 }
 #footer i {
-  color: #f1f1f1;
+  color: black;
   font-size: 20px;
   margin-left: 10px;
   margin-bottom: 10px;
   letter-spacing: 8px;
+}
+#footer .shop i{
+  font-size: 0.8rem;
 }
 #footer-right{
   margin-top: 100px;
@@ -516,10 +533,10 @@ footer .container{
   display: inline-block;
 }
 #footer ul p{
-  color: white;
+  color: black;
 }
 #footer ul a{
-  color: white;
+  color: black;
   text-decoration: none;
 }
 .footer hr{
@@ -578,7 +595,7 @@ footer .container{
     font-size: 19px;
   }
   #clabout img{
-    
+
   }
   .text-coming-soon,
   #slabout #descbox-about .text-coming-soon,
