--- a/css/style.css
+++ b/css/style.css
@@ -59,11 +59,11 @@
   font-size: 19px;
 }
 .navbar{
-  background: #FFE1B4;
+  background: #E9E8E1;
   transition: all 0.3s ease;
 }
 .navbar.sticky{
-  background: #FFE1B4;
+  background: #E9E8E1;
   box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.18);
   font-size: 18px;
 }
@@ -120,6 +120,7 @@
   margin-bottom: .4em;
 }
 .navbar .nav-item .dropdown-menu{
+  background: #E9E8E1;
   max-height: 0;
   display: block;
   overflow: hidden;
@@ -157,21 +158,22 @@
   padding-top: 3%;
 }
 .navbar .nav-item .dropdown-menu a:hover{
-  background: linear-gradient(90deg, rgba(54, 74, 130, 0.5) 0%, rgba(40, 91, 112, 0.5) 52.08%, rgba(50, 135, 150, 0.5));
+  background: #CCCCCC;
   text-decoration: none;
 }
 .navbar .nav-item .dropdown-menu a.active{
-  background: linear-gradient(90deg, rgba(54, 74, 130, 0.5) 0%, rgba(40, 91, 112, 0.5) 52.08%, rgba(50, 135, 150, 0.5));
+  background: #CCCCCC;
   text-decoration: none;
   color: black;
 }
 .navbar .login{
-  background: linear-gradient(270.02deg, #364A82 0%, #285B70 44.34%, #328796 99.96%);
-  border-radius: 20px;
-  font-size: 20px;
+  background: #FF726B;
+  border-radius: .4rem;
+  font-family: "Hind Regular";
+  font-size: 1.2rem;
   font-weight: 300;
   color: white;
-  padding: 12px 60px 10px 60px;
+  padding: 12px 40px 10px 40px;
   margin: 48px 48px 48px 27px;
   transition: all 0.3s ease;
   text-align: center;
@@ -182,34 +184,143 @@
 }
 .navbar .login:active{
   box-shadow: 0 7px 10px grey;
-  margin: 48px 48px 48px 32px;
+  margin: 0 3rem 0 1.9rem;
   font-size: 18px;
 }
 .navbar .menu-btn{
   display: none;
   cursor: pointer;
 }
+/* swiper section start */
 
-/* Header Section Start */
-header img{
-  margin-top: 180px;
+.swiper-container {
+  width: 99.4vw;
+  height: 100vh;
+  margin-top: 7%;
 }
-header h1 {
-  text-align: center;
-  position: relative;
-  margin-bottom: 0px;
-  font-family: "Galaxy Outline";
-  font-style: normal;
-  font-weight: bold;
+
+.swiper-wrapper .about{
+  margin-left: 8%;
+}
+
+.slide1{
+  background: url("/img/bg-slide1.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: bottom;
+}
+
+.slide1 img{
+  width: auto;
+  height: 25vh;
+}
+.slide1 h1{
+  text-align: left;
+  font-family: "Hind Bold";
+  font-size: 4rem;
   color: #1A6D75;
-  font-size: 55px;
-  letter-spacing: 4px;
+  margin: 0;
+}
+.slide1 p{
+  text-align: left;
+}
+.slide1 a{
+  background: #FF726B;
+  color: white;
+  font-family: "Hind Regular";
 }
 
-header .container {
-  position: relative;
-  z-index: 1;
+.swiper-container {
+  margin-left: auto;
+  margin-right: auto;
 }
+
+.swiper-button-next,
+.swiper-button-prev{
+color: white;
+}
+
+/* kategori lomba start */
+.kategori-lomba{
+  background: url("/img/awan-bg-kategori-lomba.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  margin-top: 4em;
+}
+.bionix-sl{
+  background: url("/img/card-bionix-sl.png");
+  background-size: cover;
+  border-radius: 1.5em;
+  margin: 6em 2em 6em 6em;
+  padding: 5em 0;
+  color: white;
+  border: 3px solid white;
+  box-shadow: 0 0 5px grey ;
+}
+.bionix-cl{
+  background: url("/img/card-bionix-cl.png");
+  background-size: cover; 
+  border-radius: 1.5em;
+  margin: 6em 6em 6em 2em;
+  padding: 5em 0;
+  color: white;
+  border: 3px solid white;
+  box-shadow: 0 0 5px grey ;
+}
+.bionix-sl a, .bionix-cl a{
+  color: white;
+}
+
+.swiper-bottom{
+  background: url("/img/Planet-swiper.svg");
+  background-position: right bottom;
+  background-repeat: no-repeat;
+}
+
+.swiper-2{
+  height: 100vh;
+}
+
+.content{
+  background: #F4EDE5;
+  height: 60vh;
+  border-radius: 2rem;
+  margin: 5%;
+}
+.img-nabila{
+  background: url("/img/nabila.png");
+  background-size: cover;
+  border-radius: 2rem;
+  height: 60vh;
+}
+
+.img-arif{
+  background: url("/img/arif.png");
+  background-size: cover;
+  border-radius: 2rem;
+  height: 60vh;
+}
+
+.bottom-text{
+  background: linear-gradient(0deg, rgb(255, 176, 139), rgba(255, 115, 108, 0.6));
+  height: 60vh;
+  margin: 10% 0;
+}
+
+.bottom-text .desc h2{
+  position: relative;
+  top: 10rem;
+}
+.bottom-text .desc a{
+  position: relative;
+  top: 12rem;
+  background: #E9E8E1;
+  font-family: "Hind Bold";
+  letter-spacing: .1rem;
+  padding: 1rem;
+}
+
 
 
 /* Home section start */
@@ -549,6 +660,9 @@ footer .container{
   #clbenefit img,
   #cltimeline img{
     width: 100vw;
+  }
+  .bionix-cl,.bionix-sl{
+    margin: 0;
   }
 }
 @media (max-width: 992px) {
