--- a/css/style.css
+++ b/css/style.css
@@ -24,9 +24,27 @@
   src: url("../fonts/Hind-Bold.ttf");
 }
 @font-face {
+  font-family: "Hind Semi Bold";
+  src: url("../fonts/Hind-SemiBold.ttf");
+}
+@font-face {
   font-family: "Hind Regular";
   src: url("../fonts/Hind-Regular.ttf");
 }
+@font-face {
+  font-family: "Mosk Extra-bold";
+  src: url("../fonts/Mosk\ Ultra-Bold\ 900.ttf");
+}
+@font-face {
+  font-family: "Mosk 500";
+  src: url("../fonts/Mosk\ Medium\ 500.ttf");
+}
+@font-face {
+  font-family: "Mosk 400";
+  src: url("../fonts/Mosk\ Normal\ 400.ttf");
+}
+
+
 
 /*general*/
 .bg{
@@ -56,19 +74,22 @@
 /* navbar section start */
 .nav-container{
   width: 100%;
-  font-size: 19px;
+  font-size: 1.1rem;
 }
 .navbar{
   background: #E9E8E1;
   transition: all 0.3s ease;
 }
+#navbar2{
+  margin-top: 5.6em;
+  background: rgb(255, 255, 255, .65);
+}
 .navbar.sticky{
   background: #E9E8E1;
   box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.18);
-  font-size: 18px;
 }
-.navbar.sticky .navbar-brand{ 
-  width: 100px;
+#navbarsl.sticky{
+  background: #E9E8E1;
 }
 .navbar-custom{
   height: 100px;
@@ -191,6 +212,10 @@
   display: none;
   cursor: pointer;
 }
+#usernav{
+  margin-right: 6rem;
+}
+
 /* swiper section start */
 
 .swiper-container {
@@ -216,7 +241,8 @@
 }
 .slide1 h1{
   text-align: left;
-  font-family: "Hind Bold";
+  font-family: "Mosk Extra-bold";
+  font-weight: 900;
   font-size: 4rem;
   color: #1A6D75;
   margin: 0;
@@ -248,6 +274,18 @@ color: white;
   background-position: bottom;
   margin-top: 4em;
 }
+.kategori-lomba h1{
+  font-family: "Mosk Extra-bold";
+  font-weight: 900;
+  margin-bottom: 0;
+}
+.kategori-lomba h2{
+  font-family: "Hind Bold";
+}
+.kategori-lomba p{
+  font-family: "Hind Regular";
+  letter-spacing: 0.1rem;
+}
 .bionix-sl{
   background: url("/img/card-bionix-sl.png");
   background-size: cover;
@@ -268,10 +306,85 @@ color: white;
   border: 3px solid white;
   box-shadow: 0 0 5px grey ;
 }
-.bionix-sl a, .bionix-cl a{
+
+.bionix-sl .daftar, .bionix-cl .daftar{
+  background: #E9E8E1;
+  color: black;
+  padding: .5rem 5.5rem;
+  margin: 3rem 1rem;
+}
+.bionix-sl .selengkapnya, .bionix-cl .selengkapnya{
+  background:transparent;
   color: white;
+  padding: .5rem 4rem;
+  border: 2px solid #E9E8E1;
 }
 
+/* total hadiah section start */
+.total-hadiah h2{
+  font-family: "Mosk Extra-bold";
+}
+#hadiahsl-tab:hover,
+#hadiahcl-tab:hover{
+  border: .2rem solid #ff726b;
+  border-radius: 1rem;
+}
+#hadiahsl-tab.active,
+#hadiahcl-tab.active{
+  border: .2rem solid #ff726b;
+  border-radius: 1rem;
+}
+.button-hadiah{
+  background: transparent;
+}
+
+.button-hadiah button{
+  font-size: 1.5rem;
+  font-family: "Hind Bold";
+}
+.button-hadiah img{
+  height: 2.5rem;
+}
+.card{
+  border-radius: 1rem;
+  background: linear-gradient(180deg, #F8B99E 16.75%, #FF5A52 100%);
+  margin-top: 2rem;
+}
+
+.card-body{
+  margin: 0 2rem;
+}
+
+.card h4{
+  font-family: "Hind Bold";
+  color: white;
+  margin: 1.5rem 0;
+}
+
+.card img{
+  width: 10em;
+}
+
+.card p{
+  font-family: "Hind Bold";
+  color: white;
+  margin: 1.5rem 0;
+}
+
+.card span{
+  font-family: "Hind Regular";
+  color: white;
+  margin: 1.5rem 0;
+}
+
+#juara1{
+  width: 14em;
+}
+
+
+
+
+/* swiper bottom section start */
 .swiper-bottom{
   background: url("/img/Planet-swiper.svg");
   background-position: right bottom;
@@ -280,6 +393,30 @@ color: white;
 
 .swiper-2{
   height: 100vh;
+}
+
+.swiper-bottom .title{
+  font-family: "Mosk Extra-bold";
+}
+
+.swiper-bottom .desc h2{
+  font-family: "Hind Semi Bold";
+  margin: 3rem 3rem 2rem 3rem;
+}
+
+.swiper-bottom .desc p{
+  font-family: "Hind Regular";
+  margin: 0 3rem 1rem 3rem;
+}
+
+.swiper-bottom .desc h4{
+  font-family: "Hind Semi Bold";
+  margin: 0 3rem 1rem 3rem;
+  font-size: 1rem;
+}
+
+.swiper-bottom .desc h4 span{
+ opacity: 65%;
 }
 
 .content{
@@ -302,6 +439,15 @@ color: white;
   height: 60vh;
 }
 
+.content span{
+  color: #FF726B;
+}
+
+
+
+
+/* bottom text section start */
+
 .bottom-text{
   background: linear-gradient(0deg, rgb(255, 176, 139), rgba(255, 115, 108, 0.6));
   height: 60vh;
@@ -320,256 +466,6 @@ color: white;
   letter-spacing: .1rem;
   padding: 1rem;
 }
-
-
-
-/* Home section start */
-#home {
-  text-align: center;
- }
-#descbox-about {
-  margin: 0 6% 0 6%;
-}
-#descbox-about .description{
-  margin: 12%;
-  font-weight: 500;
-  font-family: "Hind Regular";
-  font-size: 1.3rem;
-}
-.countdown {
-  text-align: center;
-  font-size: 20px;
-  font-family: "Audimat Mono Reg";
-  text-shadow: 0px 6px 6px rgb(0 0 0 / 25%);
-  margin-bottom: 90px;
-}
-.countdown li{
-  color: black;
-  display: inline-block;
-  font-size: 20px;
-  list-style-type: none;
-  padding: 1px;
-}
-#days,
-#hours,
-#minutes,
-#seconds {
-  display: block;
-  color: #2A5872;
-  font-size: 75px;
-  margin: 15px;
-  margin-bottom: 0px;
-}
-.text-coming-soon,
-#slabout #descbox-about .text-coming-soon,
-#clabout #descbox-about .text-coming-soon{
-  color: #3298A4;
-  font-family: "Galaxy Regular";
-  font-size: 111px;
-  filter: blur(0.1px);
-  -webkit-text-fill-color: #3298A4;
-  -webkit-text-stroke-width: 2px;
-  -webkit-text-stroke-color: #f0d23c;
-  text-shadow: 4px 4px 20px white;
-  margin-top: 100px;
-  text-align: center;
-  letter-spacing: 2rem;
-}
-.text-stay-tune{
-  font-family: "Audimat Mono Reg";
-  font-size: 28px;
-  font-weight: 600;
-  margin-top: 50px;
-  
-}
-.text-stay-tune span{
-  font-family: "Audimat Mono Reg";
-  font-size: 28px;
-  font-weight: 600;
-  padding-bottom: 8px;
-  border-bottom: 7px #3298A4 solid;
-  border-radius: 4px;
-}
-.tombol {
-  text-align: center;
-  margin-bottom: 500px;
-}
-.tombol a button{
-  border-radius: 20px;
-  border: none;
-  text-align: center;
-  font-family: "Hind Bold";
-  font-weight: bold;
-  font-size: 22px;
-  margin: 0px 20px 0 20px;
-  padding: 13px 25px 13px 25px;
-  color: rgb(255, 255, 255, 95%);
-  text-decoration: none;
-  transition: all 0.3s ease;
-}
-.tombol a button:hover{
-  box-shadow: 0 7px 10px grey ;
-  color: white;
-}
-.tombol a button:active{
-  font-size: 18px;
-}
-.button {
-  border-radius: 7px;
-  border: none;
-  text-align: center;
-  font-family: "Audimat Mono Reg";
-  font-weight: bold;
-  font-size: 22px;
-  margin: 0px 20px 0 20px;
-}
-#button2 {
-  margin-top: 20px;
-  padding: 13px 25px 13px 25px;
-  background: linear-gradient(270.02deg, #328796 0%, #285B70 44.34%, #364A82 99.96%);
-}
-#button3 {
-  margin-top: 20px;
-  padding: 13px 75px 13px 75px;
-  background: linear-gradient(270.02deg, #364A82 0%, #285B70 44.34%, #328796 99.96%);
-}
-
-
-/* Student level start */
-#slabout, #slbenefit, #sltimeline,
-#clabout, #clbenefit, #cltimeline{
-  background-image: url("../img/floating-rock.svg"), url("/img/landscape-planet-bawah.png");
-  background-position:top right, bottom;
-  background-repeat: no-repeat;
-  background-size: 100vw;
-}
-#slabout #descbox-about .description{
-  margin: 5rem 1% 10vw 1%;
-  background: #FFCAC8;
-  padding: 3rem 3rem 1rem 3rem;
-  border-radius: 10px;
-}
-#slabout #descbox-about .description p{
-  font-family: "Hind Bold";
-  font-weight: 700;
-  font-size: 1.4rem;
-  text-align: center;
-}
-#slabout #tahapan-student-level,
-#clabout #tahapan-student-level{
-  background: url("/img/garis.svg");
-  background-repeat: no-repeat;
-  background-position:left top;
-  background-position-y: 5.5%;
-  background-size: 21vw;
-}
-
-#slabout #tahapan-student-level h1,
-#slabout #persyaratan-student-level h1,
-#clabout #tahapan-student-level h1,
-#clabout #persyaratan-student-level h1{
-  font-family:"Galaxy Alternate Italic";
-  text-align: left;
-  margin-left: 11%;
-  margin-bottom: 0;
-  font-size: 4.5vw;
-  color: #3298A4;
-}
-#slabout #tahapan-student-level h2,
-#slabout #persyaratan-student-level h2,
-#clabout #tahapan-student-level h2,
-#clabout #persyaratan-student-level h2{
-  font-family:"Audimat Mono Bold";
-  text-align: left;
-  margin-bottom: 0;
-  font-size: 3.2vw;
-  color: #3298A4;
-}
-#slabout #tahapan-student-level p,
-#slabout #persyaratan-student-level p,
-#clabout #tahapan-student-level p,
-#clabout #persyaratan-student-level p{
-  font-family:"Hind Regular";
-  text-align: left;
-  margin-left: 3vw;
-  margin-bottom: 0;
-  font-size: 1.5vw;
-  letter-spacing: 0.125vw;
-  color: black;
-}
-#slabout #persyaratan-student-level,
-#clabout #persyaratan-student-level{
-  background: url("/img/garis.svg");
-  background-repeat: no-repeat;
-  background-position:left top;
-  background-position-y: 35%;
-  background-size: 21vw;
-}
-#slabout .space{
-  height: 30vw;
-}
-
-#slbenefit #fasilitas-student-level,
-#clbenefit #fasilitas-student-level{
-  background: url("/img/garis.svg");
-  background-repeat: no-repeat;
-  background-position:left top;
-  background-position-y: 12%;
-  background-size: 21vw;
-  margin-top: 20%;
-}
-#slbenefit #hadiah-student-level,
-#clbenefit #hadiah-student-level{
-  background: url("/img/garis.svg");
-  background-repeat: no-repeat;
-  background-position:left top;
-  background-position-y: 2%;
-  background-size: 21vw;
-}
-#slbenefit #fasilitas-student-level h1,
-#clbenefit #fasilitas-student-level h1,
-#slbenefit #hadiah-student-level h1,
-#clbenefit #hadiah-student-level h1{
-  font-family:"Galaxy Alternate Italic";
-  text-align: left;
-  margin-left: 10%;
-  margin-bottom: 0;
-  font-size: 4.5vw;
-  color: #3298A4;
-}
-#slbenefit #fasilitas-student-level p i,
-#clbenefit #fasilitas-student-level p i{
-  color: #3298A4;
-}
-#slbenefit #fasilitas-student-level p,
-#clbenefit #fasilitas-student-level p{
-  font-family:"Hind Regular";
-  text-align: left;
-  font-size: 1.5vw;
-  letter-spacing: 0.125vw;
-  color: black;
-}
-
-
-/* college level section start */
-#clabout #descbox-about .description{
-  margin: 5rem 1% 10rem 1%;
-  background: #FFCAC8;
-  padding: 3rem 3rem 1rem 3rem;
-  border-radius: 10px;
-}
-#clabout #descbox-about .description p{
-  font-family: "Hind Bold";
-  font-weight: 700;
-  font-size: 1.4rem;
-  text-align: center;
-}
-#clabout img,
-#clbenefit img,
-#cltimeline img{
-  width: 99.4vw;
-}
-
 
 /* error page section start */
 .error-content{
@@ -653,7 +549,11 @@ footer .container{
 .footer hr{
   border-top: 1px solid rgba(209, 108, 108, 0.45) ;
 }
-
+#copyright h2{
+  font-family: "Hind Regular";
+  font-size: 1.2rem;
+  color: rgba(0, 0, 0, 0.65);
+}
 /* CSS Media Query */
 @media (max-width: 1200px) {
   #clabout img,
@@ -662,7 +562,7 @@ footer .container{
     width: 100vw;
   }
   .bionix-cl,.bionix-sl{
-    margin: 0;
+    margin: 1rem;
   }
 }
 @media (max-width: 992px) {
