--- a/css/style.css
+++ b/css/style.css
@@ -56,10 +56,7 @@
 
 
 /* navbar section start */
-/* .nav-container{
-  width: 100%;
-  font-size: 1.28rem;
-} */
+
 .navbar{
   background: #E9E8E1;
   transition: all 0.3s ease;
@@ -307,6 +304,60 @@ color: white;
   letter-spacing: .2rem;
 }
 
+/* tahapan sl section start */
+
+.tahapan h1{
+  font-family: "Mosk Extra-bold";
+  font-size: 2.7rem;
+  letter-spacing: 2px;
+}
+
+.nomor{
+  border-radius: 50%;
+  margin: 0 8.9em ;
+  width: 4em;
+  height: 4em;
+  background: white;
+  border: 8px solid #ECD0C8;
+}
+
+
+.nomor h3{
+  font-size: 1.5rem;
+  font-family: "Mosk Extra-bold";
+  padding: 0.6rem 1rem;
+}
+
+#garis-tahapan{
+  background: url("/img/garis-row-tahapan.svg");
+  background-size: 70vw;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+#card-tahapan{
+  background: #F4EDE5;
+}
+#card-body-tahapan{
+  margin: 0 1rem;
+}
+#card-body-tahapan h3{
+  font-family: "Hind Semi Bold";
+  font-size: 1.6rem;
+  letter-spacing: 1px;
+  margin-top: 1em;
+}
+#card-body-tahapan hr{
+  border-top: 2px solid#9F9A95;
+}
+#card-body-tahapan p{
+  font-family: "Hind Regular";
+  font-size: 1.302rem;
+  color: black;
+}
+
+
+
 
 /* kategori lomba start */
 .kategori-lomba{
@@ -363,8 +414,13 @@ color: white;
 }
 
 /* total hadiah section start */
+#total-hadiah-sl{
+  margin-top: 8em;
+}
 .total-hadiah h2{
   font-family: "Mosk Extra-bold";
+  font-size: 2.2rem;
+  letter-spacing: 2px;
 }
 #hadiahsl-tab:hover,
 #hadiahcl-tab:hover{
@@ -423,9 +479,87 @@ color: white;
   width: 14em;
 }
 
+/* timeline section start */
+.timeline{
+  margin-top: 5em;
+}
+.timeline h1{
+  font-family: "Mosk Extra-bold";
+  font-size: 2.4rem;
+  letter-spacing: 3px;
+  margin-bottom: 1em;
+}
+.timeline h5{
+  font-family: "Hind Semi Bold";
+  font-size: 1.3rem;
+  letter-spacing: 1px;
+  margin: 1em;
+}
+#circle-timeline{
+  background: url("/img/garis-timeline.png");
+  background-size: 80vw;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+#rocket{
+  background: #E86E4B;
+}
+#rocket img{
+  margin-top: 0.6em;
+}
+.circle{
+  width: 4em;
+  height: 4em;
+  background: white;
+  border: 8px solid #ECD0C8;
+  border-radius: 50%;
+  margin: 0 5em ;
+}
 
+/* faq section start */
+.accordion{
+  margin:2em 0;
+}
+.accordion .accordion-collapse{
+  border-bottom: 3px solid black;
+  border-left: 3px solid black;
+  border-right: 3px solid black;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+}
 
-
+.accordion-header button{
+  color: none;
+  background: transparent;
+  border: 3px solid black;
+  font-family: "Hind Semi Bold";
+  font-size: 1.3rem;
+}
+.accordion-header button:focus{
+  color: #000000;
+  background: transparent;
+  border-color: #000000;
+  box-shadow: none;
+}
+.accordion-header button:not(.collapsed){
+  color: #000000;
+  background: transparent;
+  border-color: #000000;
+  box-shadow: none;
+  border-bottom: none;
+}
+.accordion-item{
+  text-align: left;
+  font-family: "Hind Normal";
+  font-size: 1.3rem;
+  background: transparent !important;
+}
+#AccordionItemOne{
+  margin-bottom: 1em;
+}
+#AccordionItemTwo{
+  margin-bottom: 8em;
+}
 /* swiper bottom section start */
 .swiper-bottom{
   background: url("/img/Planet-swiper.svg");
