--- a/css/style.css
+++ b/css/style.css
@@ -281,7 +281,7 @@ color: white;
   background: url("/img/header-sl.png");
   background-size: cover;
   background-repeat: no-repeat;
-  height: 85vh;
+  min-height: 85vh;
   color: white;
   border-radius: 30px;
 }
@@ -756,14 +756,7 @@ footer .container{
 }
 /* CSS Media Query */
 @media (max-width: 1200px) {
-  #clabout img,
-  #clbenefit img,
-  #cltimeline img{
-    width: 100vw;
-  }
-  .bionix-cl,.bionix-sl{
-    margin: 1rem;
-  }
+
 }
 @media (max-width: 992px) {
   .navbar .nav-item:hover{
@@ -794,117 +787,17 @@ footer .container{
     border-style: outset;
     border: none;
   }
-  #slabout #descbox-about .text-coming-soon, 
-  #clabout #descbox-about .text-coming-soon{
-    font-size: 4rem;
-    letter-spacing: 1rem;
-  }
-  #header-row h1 {
-    font-size: 2rem;
-  }
-
-  nav ul{
-    font-size: 19px;
-  }
   
-  .text-coming-soon,
-  #slabout #descbox-about .text-coming-soon,
-  #clabout #descbox-about .text-coming-soon{
-    font-size: 4.5rem;
-  }
-  #slabout #tahapan-student-level,
-  #clabout #tahapan-student-level{
-    background-position-y: 2%;
-    background-size: 29vw;
-  }
-  #slabout #persyaratan-student-level,
-  #clabout #persyaratan-student-level{
-    background-position-y: 24%;
-    background-size: 29vw;
-  }
-    #home .description p,
-    #slabout #descbox-about .description p,
-    #clabout #descbox-about .description p{
-      font-size: 1rem;
-    }
-    #slabout #tahapan-student-level h1,
-    #slabout #persyaratan-student-level h1,
-    #clabout #tahapan-student-level h1,
-    #clabout #persyaratan-student-level h1{
-      font-size: 1.5rem;
-    }
-    #slabout #tahapan-student-level h2,
-  #slabout #persyaratan-student-level h2,
-  #clabout #tahapan-student-level h2,
-  #clabout #persyaratan-student-level h2{
-    font-size: 1.25rem;
-  }
-
-  #slabout #tahapan-student-level p,
-  #slabout #persyaratan-student-level p,
-  #clabout #tahapan-student-level p,
-  #clabout #persyaratan-student-level p{
-    font-size: 1rem;
-  }
-  
-  #slbenefit #fasilitas-student-level,
-  #clbenefit #fasilitas-student-level{
-    background-position-y: 4%;
-    background-size: 21vw;
-  }
-  #slbenefit #hadiah-student-level,
-  #clbenefit #hadiah-student-level{
-    background-position-y: 5%;
-    background-size: 21vw;
-  }
-  #slbenefit #fasilitas-student-level h1,
-  #clbenefit #fasilitas-student-level h1,
-  #slbenefit #hadiah-student-level h1,
-  #clbenefit #hadiah-student-level h1{
-    font-size: 1.5rem;
-  }
-  #slbenefit #fasilitas-student-level p,
-  #clbenefit #fasilitas-student-level p{
-    font-size: 1rem;
-    letter-spacing: 0.125vw;
-  }
-  #slbenefit #fasilitas-student-level p i,
-  #clbenefit #fasilitas-student-level p i{
-    font-size: 2rem;
-  }
 }
 @media (max-width: 768px) {
-  #header-row h1 {
-    font-size: 1.8rem;
-  }
-  .text-coming-soon,
-  #slabout #descbox-about .text-coming-soon,
-  #clabout #descbox-about .text-coming-soon{
-    font-size: 4rem;
-  }
+
   
 }
 @media (max-width: 576px) {
-  #header-row h1 {
-    font-size: 1.5rem;
-  }
-  .text-coming-soon,
-  #slabout #descbox-about .text-coming-soon,
-  #clabout #descbox-about .text-coming-soon{
-    font-size: 2.5rem;
-  }
-  .text-stay-tune, .text-stay-tune span{
-    font-size: 1rem;
-  }
+
  
 }
 
 @media (max-width: 426px){
-  .text-coming-soon,
-  #slabout #descbox-about .text-coming-soon,
-  #clabout #descbox-about .text-coming-soon{
-    font-size: 2rem;
-    -webkit-text-stroke-width: 1.25px;
-    letter-spacing: 0.5rem;
-  }
+
 }
