--- a/css/style.css
+++ b/css/style.css
@@ -409,7 +409,7 @@ color: white;
   background: url("/img/card-bionix-sl.png");
   background-size: cover;
   border-radius: 1.5em;
-  margin: 6em 2em 6em 6em;
+  margin: 8% 0%;
   padding: 5em 0;
   color: white;
   border: 3px solid white;
@@ -419,7 +419,7 @@ color: white;
   background: url("/img/card-bionix-cl.png");
   background-size: cover; 
   border-radius: 1.5em;
-  margin: 6em 6em 6em 2em;
+  margin: 8% 0;
   padding: 5em 0;
   color: white;
   border: 3px solid white;
